# TaskPilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
examples/: mcp_config.example.json  quickstart.py
src/taskpilot/: __init__.py  agent.py  approvals.py  cli.py  config.py  mcp_provider.py  memory.py  models.py  registry.py
src/taskpilot/api/: __init__.py  main.py
src/taskpilot/connectors/: __init__.py  gmail.py  notion.py  slack.py
src/taskpilot/planner/: __init__.py  base.py  openai_planner.py  rule_based.py  scripted.py
tests/: conftest.py  test_agent.py  test_memory.py  test_rule_based.py  test_tools.py
